<resources>
    <string name="app_name">Desafio</string>

    <!-- Textos do app -->
    <string name="home_call">Ligar</string>
    <string name="home_services">Serviços</string>
    <string name="home_adress">Endereço</string>
    <string name="home_comments">Comentários</string>
    <string name="home_favorites">Favoritos</string>
    <string name="search_hint">Search</string>

    <string name="home_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <!-- Textos dos alerts -->
    <string name="alert_title">%s</string>
    <string name="alert_message">%s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
